# penrose_process

./: .gitignore  LICENSE  README.md  continuous_thrust_case.py  kerr_utils.py  pyproject.toml  single_thrust_case.py
experiments/: __init__.py  benchmark.py  comprehensive_sweep.py  ensemble.py  generate_all_data.py  generate_prd_figures.py  parameter_sweep.py  phase_space.py  regenerate_sweep_data.py  run_trajectory_study.py  thrust_comparison.py  trajectory_analysis.ipynb  trajectory_classifier.py  trajectory_visualization.py
results/: fig2_ensemble_data.json  fig5_highres_sweep.json  fig6_ultrarel_sweep.json
tests/: analyze_orbits.py  test_E_ex_directions.py  test_conservation_laws.py  test_derivatives.py  test_failure_convention.py  test_geodesic.py  test_integrator_convergence.py  test_null_cases.py  test_optimal_thrust.py  test_retrograde_thrust.py
